--- a/sign.html
+++ b/sign.html
@@ -5,22 +5,49 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="http://localhost:8000/sign.css" type="text/css">
 </head>
 <body>
-  <h1>회원가입</h1>
+  <div id="root">
+    <!-- 전체 창 -->
+  <header>
+    <!-- 맨위에 박스 -->
+    <div>
+      <!-- 맨위에 박스안에 로고 -->
+      <img src="./로고.png" width="60px" , height="60px">
+    </div>
+  </header>
   <form action='/' method='post'>
-    <p></p>
-      <input type='text' name='id' placeholder='아이디'>
-    <p></p>
-      <input type='text' name='name' placeholder='이름'>
-    <p></p>
-      <input type='text' name='adress' placeholder='주소'>
-    <p></p>
-      <input type='text' name='phone' placeholder='폰번호'> 
-    <p></p>
-      <input type='password' name='password' placeholder='비밀번호'>
-    <p></p>
-      <button type='submit'>회원가입</button>
-    </form>
+    <main>
+      <!-- 가운데 큰박스 -->
+      <div>회원가입</div>
+      <!-- 회원가입 박스 -->
+      <div>아이디</div>
+      <!-- 아이디 박스 -->
+      <input type='text' name='id' placeholder="아이디">
+      <!-- 아이디 치는 박스 -->
+      <div>비밀번호</div>
+      <!-- 비밀번호 박스 -->
+      <input type='password' name='password' placeholder="비밀번호">
+      <!-- 비밀번호 치는 박스 -->
+      <div>이름</div>
+      <!-- 이름 박스 -->
+      <input type='text' name='name' placeholder="이름">
+      <!-- 이름 치는 박스 -->
+      <div>전화번호</div>
+      <!-- 전화번호 박스 -->
+      <input type='text' name='phone' placeholder="전화번호">
+      <!-- 전화번호 치는 박스 -->
+      <div>주소</div>
+      <!-- 주소 박스 -->
+      <input type='text' name='address' placeholder="주소">
+      <!-- 주소 치는 박스 -->
+      <div>
+        <input type="submit" value="가입하기">
+      </div>
+      <!-- 가입하기 버튼 -->
+    </main> 
+  </form> 
+</div>
 </body>
 </html>
