--- a/login.html
+++ b/login.html
@@ -5,16 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="http://localhost:8000/login.css" type="text/css" rel="stylesheet" >
 </head>
 <body>
-  <h1>로그인</h1>
-  <form action="/" method="post">
-    <p></p>
-    <input type='text' name='id' placeholder="아이디">
-    <p></p>
-    <input type='password' name='password' placeholder="비밀번호">
-    <p></p>
-    <button type="submit">로그인</button>
-  </form>
+  <div id="root">
+    <!-- 전체화면 -->
+    <header>
+      <!-- 맨위에 박스 -->
+      <div>
+        <!-- 맨위에 박스 안에있는 로고 -->
+      <img src="/로고.png" width="60px",height="60px">
+      </div>
+    </header>
+    <main>
+      <!-- 가운데 박스들을 감싸는 박스 -->
+      <article>way home</article>
+      <!-- 로그인박스 -->
+      <form action="/login" method="post">
+        <section>  
+          <!-- 아이디,비밀번호 아디,비번찾기, 로그인버튼 감싸는 박스 -->
+          <input type='text' name='id' placeholder="아이디">
+          <!-- 아이디박스 -->
+          <input type='password' name='password' placeholder="비밀번호">
+          <!-- 비밀번호 박스 -->
+          <a href="">아이디/비밀번호 찾기</a>
+          <!-- 아이디/비밀번호 찾기 버튼 -->
+          <div>
+            <input type="submit" value="로그인">
+          </div>
+          <!-- 로그인버튼 -->
+        </section>
+      </form>
+    </main>
+  </div>
 </body>
 </html>
